--- a/templates/carusel.html
+++ b/templates/carusel.html
@@ -7,8 +7,8 @@
 		    <div class="carousel-item {{ slider.cms_css }}">
 		      <img src="{{ slider.cms_img.url }}" class="d-block w-100" alt="...">
 		      <div class="carousel-caption d-none d-md-block">
-		        <h5 class="slaider_h">{{ slider.cms_title }}</h5>
-		        <p class="slaider_p">{{ slider.cms_text }}</p>
+		        <h5 class="slaider_h" style = "font-family:'Comfortaa Regular' ">{{ slider.cms_title }}</h5>
+		        <p class="slaider_p" style = "font-family:'Comfortaa Regular' ">{{ slider.cms_text }}</p>
 		      </div>
 		    </div>
               {% endfor %}
