--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="/static/external.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Сайт услуг</title>
+    <title> Services for girls</title>
   </head>
   <body>
-	<nav class="navbar navbar-light bg-light container">
-	  <a class="navbar-brand logo-top" href="">
-	    <img src="/static/img/logo.png" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
-	    Империя Услуг
-	  </a>
+	<nav class="navbar  container">
+    <img src="/static/img/log.png" width="100" height="70" class="d-inline-block align-top" alt="" loading="lazy">
+	  <a  class="navbar-brand logo-top" href="{% url 'page' %}" style="font-family:'Comfortaa Regular';color:orchid">Beaty Service</a>
 	  <div class="contact-top">
                 <a class="vk-number" href="https://vk.com/lada_2/"></a>
                 <a class="telegram-number" href="https://t.me/haw0kz"></a>
-              <a class="phone-number text-dark" href="tel:+79519996606">
-              	<h5>+7(951)-999-66-06</h5></a>
+                <a class="phone-number text-dark" href="tel:+79519996606">
+              	<h5 style="font-family:'Comfortaa Regular'">+7(951)-999-66-06</h5></a>
       </div>
 	</nav>
 
@@ -36,16 +37,17 @@
 
         <footer>
                 <div class="container">
-                    <nav class="navbar navbar-light bg-light container">
-                        <a class="navbar-brand logo-top" href="#">
-                            <img src="/static/img/logo.png" width="40" height="40" class="d-inline-block align-top" alt="" loading="lazy">
-                            Империя Услуг
+                    <nav class="navbar " >
+                        <a class="navbar-brand  "  href="#">
+                            <img src="/static/img/log.png" width="90" height="60" class="d-inline-block align-top" alt="" loading="lazy">
+                            <b></b>
                         </a>
+                        <a  class="navbar-brand logo-top" href="" style="font-family:'Comfortaa Regular';color:orchid">Beaty Service</a>
                         <div class="contact-top">
                             <a class="vk-number" href="https://vk.com/lada_2/"></a>
                             <a class="telegram-number" href="https://t.me/haw0kz"></a>
                             <a class="phone-number text-dark" href="tel:+79519996606">
-                            <h5>+7(951)-999-66-06</h5></a>
+                            <h5 style="font-family:'Comfortaa Regular'">+7(951)-999-66-06</h5></a>
                         </div>
                     </nav>
                 </div>
