--- a/templates/index.html
+++ b/templates/index.html
@@ -8,30 +8,30 @@
   	<!-- форма -->
   	<section>
   		<div class="container class_form">
-  			<h1 class="text-3">Оставь заявку и получи услугу</h1>
+  			<h1  class="text-3" style = "font-family:'Comfortaa Regular' ">Оставь заявку и получи услугу</h1>
   			<div class="row justify-content-center">
   			<form action="{% url 'thanks_page' %}" method="POST" style="width: 50%;">
               {% csrf_token %}
 			  <div class="form-group row">
-			    <label for="inputEmail3" class="col-sm-2 col-form-label">Имя</label><br>
+			    <label for="inputEmail3" class="col-sm-2 col-form-label" style = "font-family:'Comfortaa Regular' ">Имя</label><br>
 			      {{ form.name }}
 			    <div class="">
 			    </div>
 			  </div>
 			  <div class="form-group row">
-			    <label for="inputEmail3" class="col-sm-2 col-form-label">Телефон</label><br>
+			    <label for="inputEmail3" class="col-sm-2 col-form-label" style = "font-family:'Comfortaa Regular' ">Телефон</label><br>
 			      {{ form.phone }}
 			    <div class="">
 			    </div>
 			  </div>
               <div class="form-group row">
-			    <label for="inputEmail3" class="col-sm-2 col-form-label">Услуга</label><br>
+			    <label for="inputEmail3" class="col-sm-2 col-form-label" style = "font-family:'Comfortaa Regular' ">Услуга</label><br>
 			      {{ form.description }}
 			    <div class="">
 			    </div>
 			  </div>
 			  <div style="float: right;" class="form-group row">
-			      <button type="submit" class="btn btn-success">ОСТАВИТЬ ЗАЯВКУ</button>
+			      <button type="submit" class="btn btn-success" style = "font-family:'Comfortaa Regular' ">ОСТАВИТЬ ЗАЯВКУ</button>
 			  </div>
 			</form>
 			</div>
